<resources>
    <!-- Server Name -->
    <!--Winston-->
    <string name="server_client_id">541978987319-47kadfah8brj041j76pad8tolm21ivl5.apps.googleusercontent.com</string>

    <!-- Navigation -->
    <string name="app_name">Avocado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Savormetrics with Harvard Engineering</string>
    <string name="nav_header_subtitle">1.800.409.8144</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Scan</string>
    <string name="menu_analyze">Analyze</string>
    <string name="menu_history">History</string>
    <string name="menu_help">Help</string>
    <string name="menu_signin">Sign In</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_register">Register</string>


    <!-- Home Fragment -->
    <string name="home_title">Scan</string>
    <string name="scan_instructions">Instructions:\nInput a Session ID of your choosing, then click on the \'Begin
    Scanning\' button to start displaying scans. After you begin, your scans will automatically
    display predicted ripeness state and estimated time until peak ripeness.</string>
    <string name="text_session">Input Session ID</string>
    <string name="text_scanNumber">Scan Number: </string>
    <string name="text_ESDR">Estimated Date of Ripeness:</string>
    <string name="text_NDUR">Number of Days Until Ripe:</string>

    <!-- Analyze Fragment -->
    <string name="analyze_page">Instructions:\nSelect a scan session from the dropdown menu then
        click analyze to view batch statistics on avocados scanned during that session. </string>
    <string-array name="spinnerNames">
        <item>Name1</item>
        <item>Name2</item>
        <item>Name3</item>
    </string-array>

    <!-- History Fragment -->
    <string name="history_page">Here is the history page. This is where you can access and search your scan history.</string>

    <!-- Help Fragment -->
    <string name="help_page">Here is the help page. We can put fun stuff like FAQs here.</string>
    <string name="actions">Actions</string>
</resources>
