<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pkg.es96a_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_analyze"
        android:name="pkg.es96a_app.ui.analyze.AnalyzeFragment"
        android:label="@string/menu_analyze"
        tools:layout="@layout/fragment_analyze" />

    <fragment
        android:id="@+id/nav_history"
        android:name="pkg.es96a_app.ui.history.Historyfragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_help"
        android:name="pkg.es96a_app.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_signin"
        android:name="pkg.es96a_app.userLoginFragment"
        android:label="@string/menu_signin"
        tools:layout="@layout/fragment_userlogin" />

    <fragment
        android:id="@+id/nav_register"
        android:name="pkg.es96a_app.registerFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

</navigation>