<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_avocado"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_analyze"
            android:icon="@drawable/analyze_icon"
            android:title="@string/menu_analyze" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_icon"
            android:title="@string/menu_help" />
    </group>

<!--    <item android:title="@string/actions">-->
<!--        <menu>-->
<!--        </menu>-->
<!--    </item>-->
</menu>
